# MIRA

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FEATURES.md  README.md  TODO.md  V2_PLAN.md  changelog.txt  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: build.yml
scripts/: generate-icons.js  make-source-icon.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: AboutView.tsx  ActivityLog.tsx  ChatView.tsx  MagneticGrid.tsx  MessageBubble.tsx  MiraLogo.tsx  Onboarding.tsx  Orb.tsx  ProjectModal.tsx  SettingsModal.tsx  Sidebar.tsx  ThinkingAnimation.tsx  VoiceMode.tsx
src/lib/: localModels.ts  log.ts  mira.ts  platform.ts  skills.ts  theme.ts
src/lib/ai/: anthropic.ts  base.ts  custom.ts  devlog.ts  gemini.ts  index.ts  models.ts  ollama.ts  openai.ts  openrouter.ts  providerMeta.ts
src/lib/desktop/: index.ts
src/lib/plugins/: index.ts
src/lib/storage/: index.ts
src/lib/voice/: stt.ts  tts.ts  wake.ts
src/store/: index.ts
src/types/: index.ts
