[package]
name = "mira"
version = "2.0.0"
description = "MIRA — MKR Intelligent Responsive Assistant. Personal AI Desktop Assistant."
authors = ["Mohammad Kaif Raja (MKR-Infinity)"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "mira_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
which = "6"
sysinfo = "0.31"
notify-rust = "4"
arboard = "3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "wincon", "winnt"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
